2000-07-25  Kenichi Handa  <handa@etl.go.jp>

	* language/japan-util.el (japanese-katakana-region): Fix handling
	HANKAKU argument.

2000-07-25  Miles Bader  <miles@gnu.org>

	* simple.el (line-move): Pass INHIBIT-CAPTURE-PROPERTY argument to
	constrain-to-field.  Pass nil ESCAPE-FROM-EDGE argument to
	constrain-to-field.

2000-07-24  Andrew Innes  <andrewi@gnu.org>

	* timer.el (timer-activate-when-idle): Add optional parameter
	DONT-WAIT.  Update docstring.
	(run-with-idle-timer): Specify extra parameter to
	timer-activate-when-idle, so that timer will be activated
	immediately if Emacs is already idle.

	* w32-fns.el (w32-using-nt): Fix docstring.

2000-07-24  Dave Love  <fx@gnu.org>

	* mouse.el (popup-menu): Set last-command-event.
	(mouse-major-mode-menu-prefix): Declare.

2000-07-24  Gerd Moellmann  <gerd@gnu.org>

	* textmodes/flyspell.el: Update to author's version 1.5d.

	* progmodes/hideshow.el: Update copyright notice.

	* vcursor.el: Set maintainer to FSF, since author cannot
	be reached.

2000-07-24  Eli Zaretskii  <eliz@is.elta.co.il>

	* info.el (Info-goto-emacs-key-command-node): Leave a space after
	the prompt.

	* mouse.el (popup-menu): Run the keymap through indirect-function,
	in case it was defined with define-prefix-key.  If the menu is a
	list of keymaps, look up the binding of user's choice in each one
	of the keymaps.
	(mouse-popup-menubar): If the global and local menu-bar keymaps
	don't have a prompt string, create one and insert it into the
	keymap.  Don't barf if current-local-map returns nil.

2000-07-24  Francis Wright  <fjw@maths.qmw.ac.uk>

	* dired.el (dired-sort-R-check): Added to allow recursive listing
	to be undone.
	(dired-sort-other): Use it.

2000-07-24  Martin Stjernholm  <bug-cc-mode@gnu.org>

	* Release of cc-mode 5.27

2000-07-24  Martin Stjernholm  <bug-cc-mode@gnu.org>

	* cc-engine.el (c-looking-at-inexpr-block): Replaced a call to
	c-beginning-of-statement-1 that caused a bad case of recursion